--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ body {
 
 .wrapper {
   background: #FFFFFF;
-  box-shadow: 0px 10px 20px 0px #0000000A;
+  box-shadow: 0 10px 20px 0 #0000000A;
   border-radius: 20px;
   max-width: 1080px;
   margin: 50px auto;
