--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ body {
 
 .wrapper {
   background: #FFFFFF;
-  box-shadow: 0 10px 20px 0 #0000000A;
+  box-shadow: 0px 10px 20px 0px #0000000A;
   border-radius: 20px;
   max-width: 1080px;
   margin: 50px auto;
@@ -26,6 +26,16 @@ body {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+
+  .clear {
+    position: absolute;
+    right: 0;
+    top: 14px;
+    right: 15px;
+    width: 18px;
+    height: 18px;
+  }
 
   input {
     border: 0;
