--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,27 +1,27 @@
 header {
-  border-bottom: 1px solid #EAEAEA;
+    border-bottom: 1px solid #eaeaea;
 
     .headerLogo {
-      margin-right: 15px;
-      width: 40px;
-      height: 40px;
+        margin-right: 15px;
+        width: 40px;
+        height: 40px;
     }
     .headerCart {
-      width: 18px;
-      height: 18px;
-      margin-right: 15px;
+        width: 18px;
+        height: 18px;
+        margin-right: 15px;
     }
     .headerHeart {
-      width: 18px;
-      height: 18px;
+        width: 18px;
+        height: 18px;
     }
     .headerUser {
-      width: 18px;
-      height: 18px;
+        width: 18px;
+        height: 18px;
     }
 
     h3,
     p {
-      margin: 0 auto;
+        margin: 0 auto;
     }
 }
